fix(#1999): simplify vertical alignment of "Search by Algolia" text

--- a/packages/dev/docs/src/docs.css
+++ b/packages/dev/docs/src/docs.css
@@ -670,16 +670,12 @@ h2.sectionHeader {
 .docSearchLogo a {
   color: var(--spectrum-global-color-gray-700);
   display: flex;
+  align-items: center;
   text-decoration: none;
 }
 
 .docSearchLogoLabel {
   font-size: var(--spectrum-global-dimension-font-size-75);
-  line-height: 1.6;
-}
-
-[role="dialog"] .docSearchLogoLabel {
-  line-height: 1.2;
 }
 
 .docSearchLogo a:hover .docSearchLogoLabel,
